--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           Hey there !
         </h1>
         <h2 class="subtitle is-1">
-            <i class="fas fa-arrow-alt-circle-down"></i>
+            <a href="#tabs" onclick="openTab('About')"><i class="fas fa-arrow-alt-circle-down"></i></a>
         </h2>
       </div>
       
