Text correction + change resume

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h1 class="title">About Me</h1>
                     <div class="columns">
                         <div class="column">
-                            <p>Hey ! I am Pierre ASDRUBAL WEB Developer, graduate from the University of Orleans in France and self-taught since then. Always happy to learn new stuff and improve my skills. D'ont hesitate to give a look at my previous work or to contact me, I would be happy to get something new started. Hope hearing from you soon &#128513</p>
+                            <p>Hey! I am Pierre ASDRUBAL, WEB Developer, graduate from the University of Orleans in France and self-taught since then. Always glad to learn something new and improve my skills. Don't hesitate to have a look at my previous work or to contact me, I would be happy to get something new started. Hope to hear from you soon &#128513</p>
                             <hr />
                             <nav class="level">
                                 <div class="level-item has-text-centered">
@@ -56,7 +56,7 @@
                         </div>
                         <div class="column">
                         <figure class="image">
-                            <img class="is-rounded" src="img/Me.jpg" alt="Placeholder image">
+                            <img class="is-rounded" src="img/Me.jpg" alt="Profil picture">
                         </figure>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="column">
                             <p class="heading">Technologies currently used</p>
-                            <p>REACT, React-router, Axios, Node.js, Epress, PostgreSQL, Joi, Bulma, Git</p>
+                            <p>REACT, React-router, Axios, Node.js, Epress, PostgreSQL, Joi, Bulma, Git, JWT</p>
                             <br>
                             <p class="heading">Technologies used in the past</p>
                             <p>PHP, Jquery, MySQL, AJAX, Python, VBA, Bootstrap, JAVA, C++</p>
@@ -104,7 +104,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title">My work</h1>
-                    <p>Here is preview of my last apps, fully responsive & functionnal.</p>
+                    <p>Here is a preview of my last apps, fully responsive & functional.</p>
                     <div class="columns">
                         <div class="content">
                         </div>
@@ -117,7 +117,7 @@
                                 </header>
                             <div class="card-image">
                                 <figure class="image">
-                                <img src="img/CocktailsLife.png" alt="Placeholder image">
+                                <img src="img/CocktailsLife.png" alt="CocktailsLife home">
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -147,7 +147,7 @@
                             </header>
                             <div class="card-image">
                                 <figure class="image">
-                                <img src="img/RecipeZ.png" alt="Placeholder image">
+                                <img src="img/RecipeZ.png" alt="RecipeZ home">
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -214,23 +214,23 @@
         <div class="modal-content">
             <div class="box">
             <figure class="image">
-                <img src="img/RecipeZ/Main.png" alt="Placeholder image">
+                <img src="img/RecipeZ/Main.png" alt="RecipeZ preview">
             </figure>
             <hr />
             <figure class="image">
-                <img src="img/RecipeZ/SignIn.png" alt="Placeholder image">
+                <img src="img/RecipeZ/SignIn.png" alt="RecipeZ preview">
             </figure>
             <hr />
             <figure class="image">
-                <img src="img/RecipeZ/MyRecipes.png" alt="Placeholder image">
+                <img src="img/RecipeZ/MyRecipes.png" alt="RecipeZ preview">
             </figure>
             <hr />
             <figure class="image">
-                <img src="img/RecipeZ/Recipe1.png" alt="Placeholder image">
+                <img src="img/RecipeZ/Recipe1.png" alt="RecipeZ preview">
             </figure>
             <hr />
             <figure class="image">
-                <img src="img/RecipeZ/Recipe2.png" alt="Placeholder image">
+                <img src="img/RecipeZ/Recipe2.png" alt="RecipeZ preview">
             </figure>
         </div>
         </div>
@@ -241,15 +241,15 @@
         <div class="modal-content">
             <div class="box">
             <figure class="image">
-                <img src="img/CocktailsLife/Main.png" alt="Placeholder image">
+                <img src="img/CocktailsLife/Main.png" alt="CocktailsLife preview">
             </figure>
             <hr />
             <figure class="image">
-                <img src="img/CocktailsLife/Recipes.png" alt="Placeholder image">
+                <img src="img/CocktailsLife/Recipes.png" alt="CocktailsLife preview">
             </figure>
             <hr />
             <figure class="image">
-                <img src="img/CocktailsLife/Negroni.png" alt="Placeholder image">
+                <img src="img/CocktailsLife/Negroni.png" alt="CocktailsLife preview">
             </figure>
         </div>
         </div>
