Add a new work : artOfLevani

--- a/index.html
+++ b/index.html
@@ -158,11 +158,41 @@
                                         <li>Front : REACT</li>
                                         <li>Back : express</li>
                                         <li>Database : PostgreSQL</li>
-                                        <li>CSS Framework : Bulma</li>
+                                        <li>CSS Framework : Bulma, SASS</li>
                                     </ul>
                                     <div class="has-text-centered">
                                     <a class="button is-success" onclick="openModal('RecipeZ')">preview &nbsp;<i class="fas fa-images"></i></a>
                                     <a class="button is-dark" href="https://github.com/GraineFutee/Recipez" target="_blank">View code &nbsp;<i class="fab fa-github-square"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                            
+                        </div>
+                        <div class="column">
+                            <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                ArtOfLevani
+                                </p>
+                            </header>
+                            <div class="card-image">
+                                <figure class="image">
+                                <img src="img/ArtOfLevani.png" alt="ArtOfLevani home">
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                            
+                                <div class="content">
+                                    <p>A professional website for the photographer Levani Levanidze build with :</p>
+                                    <ul>
+                                        <li>Front : NextJs</li>
+                                        <li>Back : NextJs</li>
+                                        <li>CSS Framework : Bulma, SASS</li>
+                                    </ul>
+                                    <div class="has-text-centered">
+                                    <a class="button is-info" href="https://sad-leakey-a5543e.netlify.app/" target="_blank">Website &nbsp;<i class="fas fa-globe"></i></a>
+                                    <a class="button is-dark" href="https://github.com/GraineFutee/artoflevani" target="_blank">View code &nbsp;<i class="fab fa-github-square"></i></a>
                                     </div>
                                 </div>
                             </div>
